<resources>
    <string name="app_name">Pandemic Tracker</string>
    <string name="headlinesTitle">Top Headlines</string>
    <string name="settingsTitle">Settings</string>
    <string name="aboutTitle">About</string>
    <string name="contributorsTitle">Contributors</string>
    <string name="darkModeTitle">Dark Mode</string>
    <string name="darkModeKey">enableDarkMode</string>
    <string name="favoriteRegionTitle">Home</string>
    <string name="favoriteRegionDialogTitle">Select region</string>
    <string name="favoriteRegionKey">fRegionKey</string>
    <string name="languageTitle">Language</string>
    <string name="languageDialogTitle">Select language</string>
    <string name="languageKey">languageKey</string>

    <string name="aboutText">"TODO"</string>
    <string name="contributorsText">"TODO"</string>
    <string name="darkModeText">Switch to dark mode for browsing and reading.</string>
    <string name="languageText">Set language filter for headlines.</string>
    <string name="favoriteRegionText">Choose which region should be displayed by default on the home screen.</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <string name="cases">Coronavirus Cases:</string>
    <string name="deaths">Deaths:</string>
    <string name="recovered">Recovered:</string>

    <string-array name="region_list">
        <item>Global</item>
        <item>China</item>
        <item>Italy</item>
        <item>Iran</item>
        <item>Spain</item>
        <item>Germany</item>
        <item>S. Korea</item>
        <item>France</item>
        <item>USA</item>
        <item>Switzerland</item>
        <item>UK</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Sweden</item>
        <item>Denmark</item>
        <item>Japan</item>
        <item>Diamond Princess</item>
        <item>Malaysia</item>
        <item>Canada</item>
        <item>Australia</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Czechia</item>
        <item>Greece</item>
        <item>Brazil</item>
        <item>Israel</item>
        <item>Finland</item>
        <item>Ireland</item>
        <item>Slovenia</item>
        <item>Singapore</item>
        <item>Pakistan</item>
        <item>Bahrain</item>
        <item>Poland</item>
        <item>Estonia</item>
        <item>Romania</item>
        <item>Iceland</item>
        <item>Chile</item>
        <item>Egypt</item>
        <item>Philippines</item>
        <item>Thailand</item>
        <item>Indonesia</item>
        <item>Hong Kong SAR</item>
        <item>Iraq</item>
        <item>India</item>
        <item>Luxembourg</item>
        <item>Kuwait</item>
        <item>Lebanon</item>
        <item>San Marino</item>
        <item>Peru</item>
        <item>Russia</item>
        <item>UAE</item>
        <item>Ecuador</item>
        <item>Turkey</item>
        <item>Slovakia</item>
        <item>South Africa</item>
        <item>Mexico</item>
        <item>Bulgaria</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Taiwan</item>
        <item>Serbia</item>
        <item>Panama</item>
        <item>Croatia</item>
        <item>Vietnam</item>
        <item>Colombia</item>
        <item>Algeria</item>
        <item>Latvia</item>
        <item>Brunei</item>
        <item>Albania</item>
        <item>Hungary</item>
        <item>Costa Rica</item>
        <item>Uruguay</item>
        <item>Cyprus</item>
        <item>Jordan</item>
        <item>Faeroe Islands</item>
        <item>Morocco</item>
        <item>Sri Lanka</item>
        <item>Palestine</item>
        <item>Andorra</item>
        <item>Malta</item>
        <item>Belarus</item>
        <item>Azerbaijan</item>
        <item>Georgia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Cambodia</item>
        <item>Oman</item>
        <item>Kazakhstan</item>
        <item>Venezuela</item>
        <item>North Macedonia</item>
        <item>Moldova</item>
        <item>Senegal</item>
        <item>Lithuania</item>
        <item>Tunisia</item>
        <item>Afghanistan</item>
        <item>Dominican Republic</item>
        <item>New Zealand</item>
        <item>Liechtenstein</item>
        <item>Guadeloupe</item>
        <item>Martinique</item>
        <item>Burkina Faso</item>
        <item>Ukraine</item>
        <item>Macao</item>
        <item>Maldives</item>
        <item>Bolivia</item>
        <item>Jamaica</item>
        <item>French Guiana</item>
        <item>Uzbekistan</item>
        <item>Bangladesh</item>
        <item>Cameroon</item>
        <item>Monaco</item>
        <item>Paraguay</item>
        <item>Réunion</item>
        <item>Guatemala</item>
        <item>Honduras</item>
        <item>Guyana</item>
        <item>Cuba</item>
        <item>Ghana</item>
        <item>Rwanda</item>
        <item>Channel Islands</item>
        <item>Ethiopia</item>
        <item>Guam</item>
        <item>Mongolia</item>
        <item>Puerto Rico</item>
        <item>Trinidad and Tobago</item>
        <item>Ivory Coast</item>
        <item>Kenya</item>
        <item>Seychelles</item>
        <item>Nigeria</item>
        <item>Aruba</item>
        <item>Curaçao</item>
        <item>DRC</item>
        <item>French Polynesia</item>
        <item>Gibraltar</item>
        <item>Mayotte</item>
        <item>St. Barth</item>
        <item>Barbados</item>
        <item>Liberia</item>
        <item>Montenegro</item>
        <item>Namibia</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>U.S. Virgin Islands</item>
        <item>Cayman Islands</item>
        <item>Sudan</item>
        <item>Nepal</item>
        <item>Antigua and Barbuda</item>
        <item>Bahamas</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>CAR</item>
        <item>Congo</item>
        <item>Equatorial Guinea</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Greenland</item>
        <item>Guinea</item>
        <item>Vatican City</item>
        <item>Mauritania</item>
        <item>St. Vincent Grenadines</item>
        <item>Somalia</item>
        <item>Suriname</item>
        <item>Eswatini</item>
        <item>Tanzania</item>
        <item>Togo</item>
    </string-array>
    <string name="region_default">Global</string>

    <string-array name="language_titles">
        <item>None</item>
        <item>English</item>
        <item>Français</item>
        <item>Español</item>
    </string-array>
    <string-array name="language_values">
        <item>none</item>
        <item>en</item>
        <item>fr</item>
        <item>es</item>
    </string-array>
    <string name="language_default_value">none</string>

</resources>
