<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Preferences">

        <ListPreference
            android:title="@string/favoriteRegionTitle"
            android:dialogTitle="@string/favoriteRegionDialogTitle"
            android:defaultValue="@string/region_default_value"
            android:summary="@string/favoriteRegionText"
            android:key="@string/favoriteRegionKey"
            style="@style/listPreferenceStyle" />

        <ListPreference
            android:title="@string/languageTitle"
            android:dialogTitle="@string/languageDialogTitle"
            android:entries="@array/language_titles"
            android:entryValues="@array/language_values"
            android:defaultValue="@string/language_default_value"
            android:summary="@string/languageText"
            android:key="@string/languageKey"
            style="@style/listPreferenceStyle" />

        <androidx.preference.SwitchPreferenceCompat
            android:title="@string/darkModeTitle"
            android:defaultValue="false"
            android:summary="@string/darkModeText"
            android:key="@string/darkModeKey"
            style="@style/listPreferenceStyle" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>